# Turkish-Code

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  PROJECT_ANALYSIS.md  README.md
core/: README.md  pyproject.toml
core/tests/: conftest.py  fakes.py  pipes.py  test_ajanlar_baglam.py  test_ajanlar_dagitici.py  test_ajanlar_entegrasyon.py  test_ajanlar_kayit.py  test_ajanlar_kompozisyon.py  test_ajanlar_modeller.py  test_ajanlar_oturum.py  test_ajanlar_yasam.py  test_aktarim.py  test_app_error.py  test_araclar_akis.py  test_araclar_dagitici.py  test_araclar_entegrasyon.py  test_araclar_izin.py  test_araclar_kayit.py  test_araclar_kompozisyon.py  test_araclar_modeller.py  test_base_openai_compat.py  test_bellek_depo_indeks.py  test_bellek_kayit.py  test_benchmark_probe.py  test_benchmark_profile.py  test_benchmark_quality.py  test_benchmark_store.py  test_calisma_alani_baglam.py  test_calisma_alani_config.py  test_calisma_alani_entegrasyon.py  test_calisma_alani_kayit.py  test_calisma_alani_kompozisyon.py  test_calisma_alani_modeller.py  test_calisma_alani_yasam.py  test_calisma_alani_yonetici.py  test_candidates.py  test_capability_match.py  test_capability_taxonomy.py  test_cerceve.py  test_dagitim.py  (+74 more)
core/turkish_code/: __init__.py  __main__.py  kompozisyon.py
core/turkish_code/ajanlar/: __init__.py  baglam.py  dagitici.py  durum.py  iptal.py  kayit.py  kompozisyon.py  modeller.py  oturum.py  protocol.py  yasam.py
core/turkish_code/araclar/: __init__.py  akis.py  baglam.py  dagitici.py  hata.py  iptal.py  izin.py  kayit.py  kompozisyon.py  modeller.py  protocol.py
core/turkish_code/bellek/: __init__.py  depo.py  durum.py  indeks.py  katman.py  kayit.py  kimlik.py
core/turkish_code/calisma_alani/: __init__.py  baglam.py  hata.py  kayit.py  kompozisyon.py  modeller.py  oturum.py  protocol.py  yasam.py  yonetici.py
core/turkish_code/depo/: __init__.py  alan.py  baglanti.py  blobs.py  db.py  fts.py  hata_eslem.py  islem.py  journal.py  migrate.py  vec.py  yerlesim.py
core/turkish_code/depo/repos/: __init__.py  bellek.py  graf.py  graf_gezinme.py
core/turkish_code/depo/schema/: __init__.py
core/turkish_code/depo/schema/app/: 0001_initial.sql  0002_memory.sql
core/turkish_code/depo/schema/workspace/: 0001_initial.sql  0002_blobs.sql  0003_memory.sql  0004_graph.sql  0005_lexical.sql
core/turkish_code/eklentiler/: __init__.py  dogrulama.py  izin.py  kayit.py  kompozisyon.py  manifest.py  modeller.py  protocol.py  yasam.py  yukleyici.py
core/turkish_code/getirim/: __init__.py  birlestirici.py  depo.py  getirici.py  kurulum.py  parca.py  planlayici.py  siralama.py  sorgu.py
core/turkish_code/gomme/: __init__.py  embedder.py  kimlik.py  meta.py  reranker.py  tur.py
core/turkish_code/gozlem/: __init__.py  catalog.py  collect.py  rollup.py
core/turkish_code/graf/: __init__.py  depo.py  dugum.py  kenar.py  kimlik.py
core/turkish_code/gunluk/: __init__.py  kayitci.py  redaksiyon.py
core/turkish_code/hata/: __init__.py  app_error.py  kinds.py
core/turkish_code/kanal/: __init__.py  aktarim.py  cerceve.py  dagitim.py  dogrulama.py  eslesme.py  iptal.py  mesaj.py  sunucu.py  uygulama.py
core/turkish_code/ortak/: __init__.py  kimlik.py  saat.py  seviye.py
core/turkish_code/saglayicilar/: __init__.py  base_openai_compat.py  manager.py  provider.py  seeds.py
core/turkish_code/saglayicilar/cache/: __init__.py  model_cache.py  refresh.py
core/turkish_code/saglayicilar/gemini/: __init__.py  adapter.py
core/turkish_code/saglayicilar/groq/: __init__.py  adapter.py
core/turkish_code/saglayicilar/nvidia_nim/: __init__.py  adapter.py
core/turkish_code/saglayicilar/ollama/: __init__.py  adapter.py
core/turkish_code/saglayicilar/openrouter/: __init__.py  adapter.py
core/turkish_code/sohbet/: __init__.py  baglam.py  dagitici.py  gecmis.py  kompozisyon.py  modeller.py  motor.py  oturum.py  protocol.py  yasam.py
core/turkish_code/yapilandirma/: __init__.py  ayarlar.py  depolama.py  sabitler.py  saglayicilar.py  yollar.py  yukleyici.py  zeka.py
core/turkish_code/yetenekler/: __init__.py  baglam.py  dagitici.py  hata.py  kayit.py  kompozisyon.py  modeller.py  protocol.py  yasam.py
core/turkish_code/yonlendirme/: __init__.py  candidates.py  decision.py  mod.py  resilience.py  router.py
core/turkish_code/yonlendirme/benchmark/: __init__.py  probe.py  profile.py  quality.py  store.py
core/turkish_code/yonlendirme/capability/: __init__.py  match.py  need.py  taxonomy.py
core/turkish_code/yonlendirme/quota/: __init__.py  headroom.py  policy.py  store.py  tracker.py
core/turkish_code/yonlendirme/scoring/: __init__.py  combine.py  model_score.py  provider_score.py  weights.py
docs/: 00_PROJECT_VISION.md  01_ARCHITECTURE.md  02_DESIGN_PRINCIPLES.md  03_UI_SYSTEM.md  04_TURKISH_DESIGN_LANGUAGE.md  05_ANIMATION_SYSTEM.md  06_COMPONENT_LIBRARY.md  07_DESKTOP_ARCHITECTURE.md  08_TAURI_ARCHITECTURE.md  09_PYTHON_BACKEND.md  10_IPC.md  11_MEMORY_SYSTEM.md  12_KNOWLEDGE_GRAPH.md  13_RAG_SYSTEM.md  14_EMBEDDINGS.md  15_REASONING_ENGINE.md  16_COUNCIL_MODE.md  17_EFFORT_MODES.md  18_AGENT_SYSTEM.md  19_SKILLS_SYSTEM.md  20_TOOL_SYSTEM.md  21_PROVIDER_SYSTEM.md  22_PROVIDER_INTEGRATIONS.md  23_PLUGIN_SYSTEM.md  24_PERMISSION_SYSTEM.md  (+31 more)
shell/: Cargo.toml
shell/shell-app/: Cargo.toml  README.md  tauri.conf.json
shell/shell-app/capabilities/: default.json
shell/shell-app/src/: main.rs
shell/shell-core/: Cargo.toml
shell/shell-core/src/: app.rs  bridge.rs  commands.rs  core_process.rs  errors.rs  events.rs  frame.rs  ipc.rs  lib.rs  lifecycle.rs  message.rs  permissions.rs  state.rs
shell/shell-core/src/app/: tests.rs
shell/shell-core/src/commands/: tests.rs
shell/shell-core/src/core_process/: tests.rs
shell/shell-core/src/events/: tests.rs
shell/shell-core/src/ipc/: tests.rs
shell/shell-core/src/lifecycle/: tests.rs
shell/shell-core/src/message/: tests.rs
shell/shell-core/src/permissions/: tests.rs
shell/shell-core/tests/: core_channel.rs  desktop_app.rs
shell/shell-core/tests/common/: mod.rs
(+1 files in other folders)
