# Çekirdek (Python AI-brain sidecar) package + toolchain.
# Toolchain per doc 36 §5.3 / doc 37 §6: ruff (lint) + black (format) +
# mypy (strict-ish) + pytest. Authoritative version matrix: doc 33 §5.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "turkish-code-core"
version = "0.0.0"
description = "turkish.code Çekirdek — the Python AI-brain sidecar (doc 09)."
requires-python = ">=3.12"
dependencies = [
    # Async HTTP client for all provider adapters (doc 21/22) — one library,
    # hand-rolled request/response shapes per provider (doc 36 §11: prefer
    # a single dependency over per-vendor SDKs).
    "httpx>=0.28,<0.29",
    # Content-addressed blob store hashing (doc 29 §6, ADR-B). BLAKE3 is fixed
    # project-wide for CAS; changing it is a major re-hash migration (doc 29 §24).
    "blake3>=1.0,<2.0",
]

[project.optional-dependencies]
# Optional vector backend (doc 29 §4, ADR-C). sqlite-vec is loaded at runtime
# only when present; storage stays fully functional without it (lexical-only),
# so this is an opt-in extra, never a core dependency.
vector = [
    "sqlite-vec>=0.1,<0.2",
]
# Dev-only; kept minimal (PR: prefer stdlib/existing deps, doc 36 §11).
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["turkish_code"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["turkish_code", "tests"]

[tool.ruff.lint]
# E/F pycodestyle+pyflakes, I import-sort, UP pyupgrade, B bugbear,
# T20 flake8-print — bans `print(` in the Çekirdek (doc 09 §16, doc 36 §5.3).
select = ["E", "F", "I", "UP", "B", "T20"]

[tool.ruff.lint.per-file-ignores]
# Tests may assert on structure without production-strictness noise.
"tests/**" = ["B"]

[tool.black]
target-version = ["py312"]
line-length = 88

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
files = ["turkish_code", "tests"]

# blake3 (doc 29 §6, ADR-B) and sqlite-vec (doc 29 §4, ADR-C) ship no type
# stubs; their surfaces we use are tiny and wrapped behind depo/blobs.py and
# depo/vec.py, so treat the imports as untyped there.
[[tool.mypy.overrides]]
module = ["blake3", "sqlite_vec"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
