[package]
name = "shell-app"
description = "turkish.code Desktop Shell — Tauri v2 host binary (thin adapter over shell-core)."
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.90"

[lib]
name = "shell_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "shell-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
shell-core = { path = "../shell-core" }
tauri = { version = "2", features = [] }
serde_json = "1"

[features]
# Enabled by `tauri build`; unused in dev.
custom-protocol = ["tauri/custom-protocol"]
