[package]
name = "shell-core"
description = "Host-side core of the turkish.code Desktop Shell (Phase 12)."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde_json = "1"
tokio = { version = "1", features = [
    "process",
    "io-util",
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
] }

[dev-dependencies]
